--- a/web/tmpl/NotebookView.tmpl
+++ b/web/tmpl/NotebookView.tmpl
@@ -441,7 +441,7 @@ function image_preview(obj, preview) {
 <table>
  <tr valign="top">
   <td>
-   <span style="color:dimgray;font-weight:bold;">Info</span><br>
+   <span style="color:dimgray;font-weight:bold;">Notebook Info</span><br>
    <div id="list_info">
     <TMPL_VAR NAME="LIST_INFO">
    </div>
