--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -836,7 +836,7 @@ function rand ()
 <span class="small">Merge Previous GEvo Analysis (paste in URL): <input name=previous_url id=previous_url type="textbox" size=20 value=<TMPL_VAR NAME ="PANEL_URL">></span>
   <span class='ui-button ui-corner-all ui-button-icon-left ' 
   onClick="merge_previous(['previous_url','num_seqs'],[process_add_seq]); gen_hsp_colors(['args__num_seqs','num_seqs'],[add_hsp_colors]);"><span class="ui-icon ui-icon-plus"></span>Merge</span>
- <br>
+ <br><br>
 <span class="small">Change order by dragging boxes</span>
   <table><tr><td>
     <div id="sorter" class="sorter">
@@ -850,6 +850,7 @@ function rand ()
 
      <div class=small>
 <!--     Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" />-->
+    <br>
      Apply distance to all CoGe submissions: <input type="textbox" size=8 name="apply_all" id="apply_all" value="<TMPL_VAR NAME="APPLY_ALL">" />
      &nbsp&nbsp&nbsp&nbsp
      Pad CoGe Sequences with additional sequence: <input type="textbox" name="pad_gs" id="pad_gs" value="<TMPL_VAR NAME="PAD_GS">" size =8/>
@@ -1320,8 +1321,8 @@ Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;
 
   </table>
 </div>
-<div style="float: left;">
-   Change HSP colors <span class="small">(Click Color to Adjust)</span>
+<div class="small" style="float: left;">
+   Change HSP colors <span>(Click Color to Adjust)</span>
  <DIV id="hsp_colors"><TMPL_VAR NAME="HSP_COLOR"></DIV>
  </div>
 </div>
@@ -1333,8 +1334,6 @@ Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;
 </table>
 </div> <!--end div for tabs-3 div -->
 </div> <!--end div for tabs-->
-
-<span id=go style="font-size: 1em" class='ui-button ui-button-go ui-corner-all go_run' onClick="populate_page_obj(); set_display_order(); loading([],['results']); go_run();">Run GEvo Analysis!</span>
 
 </form>
 </TMPL_IF>
@@ -1349,15 +1348,15 @@ Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;
 <table>
 <tr>
 <td>Work Name:</td>
-<td><input type=text id='work_name' value='GEvo Data'></td>
+<td><input type="text" id='work_name' value='GEvo Data'></td>
 </tr>
 <tr>
 <td>Description:</td>
-<td><input type=text id='description'></td>
+<td><input type="text" id='description'></td>
 </tr>
 <tr>
 <td>Notes:</td>
-<td><textarea style="height:150px;width:350px;" id=note></textarea></td>
+<td><textarea style="height:150px;width:350px;" id="note"></textarea></td>
 </table>
 </div>
 </TMPL_IF>
