--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -13,10 +13,14 @@ function init_table() {
 		});
  }
 
+function has_organisms () {
+    return ($('#org_id1').val() != "") &&
+        ($('#org_id2').val() != "");
+}
+
 $(function() {$("#pair_info").draggable();});
 $(function() {$("#tabs").tabs({selected:0});});	     
 $(function() {$(".resizable").resizable();});
-
 
 function get_gc (dsgid, divid)
 {
@@ -61,10 +65,7 @@ function populate_page_obj(basefile)
   pageObj.waittime = 1000;
  }
 
-
-
-
-function run_synmap(){
+function run_synmap(scheduled){
 //  generate_basefile([],[update_basename]);   
  populate_page_obj(); 
  var org_name1 = pageObj.org_name1;
@@ -84,7 +85,7 @@ function run_synmap(){
  if (( org_length1 > max_size && feat_type1 == 2 && seq_type1 == 1) &&
      ( org_length2 > max_size && feat_type2 == 2 && seq_type2 == 1) )
      {
-     var message = "You are trying to compare unmasked genomic sequences that are large!  This is a bad idea.  Chances are there will be many repeat sequences that will cause the entire pipeline to take a long time to complete.  This usually means that the analyses will use a lot of RAM and other resources.  As such, these jobs are usually killed before they can complete.  Please contact <a href=/wiki/index.php/Contact_Page target=_new>the CoGe team</a> for assistance with your analysis.";
+     var message = "You are trying to compare unmasked genomic sequences that are large!  This is a bad idea.  Chances are there will be many repeat sequences that will cause the entire pipeline to take a long time to complete.  This usually means that the analyses will use a lot of RAM and other resources.  As such, these jobs are usually killed before they can complete.  Please contact coge.genome@gmail.com for assistance with your analysis.";
    		alert(message);
    	 	$('#log_text').hide(0);
 	 		$('#results').show(0).html("<span class=alert>Analysis Blocked:</span>"+message);
@@ -92,42 +93,155 @@ function run_synmap(){
      }
  if(!pageObj.basename) 
   {
-  	setTimeout("run_synmap()", 100);
+    var run_callback = function() {
+        run_synmap(scheduled);        
+    };
+
+  	setTimeout(run_callback, 100);
   	return;
   }
+
+    if (!has_organisms())
+        return;
  
- if ($('#blast').val() == 5 && (feat_type1 != 1 || feat_type2 != 1) )
-  {
-   alert('BlastP only works if both genomes have protein coding sequences (CDS) AND CDS is selected for both!');
-  }
- else
-  {
-   jQuery('html, body').animate({scrollTop: 0}, 1000); 
-   $('#results').hide(0);  	
-   $('#log_text').html('Beginning run...');
-   $('#log_text').show(0);
-   pageObj.nolog=1;
-   setTimeout("read_log(['args__logfile', 'args__'+pageObj.basename, 'args__tempdir', 'args__'+pageObj.tempdir], [monitor_log])",pageObj.waittime);
-   go(['args__tdd','tdd','args__D','D', 'args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__axis_relationship','axis_relationship', 'args__min_chr_size', 'min_chr_size', 'args__spa_ref_genome','spa_ref_genome', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap', 'args__fid1','args__'+pageObj.fid1, 'args__fid2','args__'+pageObj.fid2, 'args__show_non_syn_dots','args__'+$('#show_non_syn_dots')[0].checked,'args__flip','args__'+$('#flip')[0].checked,'args__clabel','args__'+$('#clabel')[0].checked,'args__skip_rand','args__'+$('#skiprand')[0].checked,'args__color_scheme','color_scheme', 'args__chr_sort_order','chr_sort_order', 'args__codeml_min', 'codeml_min', 'args__codeml_max', 'codeml_max', 'args__logks','args__'+$('#logks')[0].checked, 'args__csco','csco'],[handle_results] );
- }
+    if ($('#blast').val() == 5 && (feat_type1 != 1 || feat_type2 != 1) ) {
+        alert('BlastP only works if both genomes have protein coding sequences (CDS) AND CDS is selected for both!');
+        return;
+    }
+	
+    var dagchainer = $('#dagchainer_type').filter(':checked');
+    var argument_list = {
+        tdd: $('#tdd').val(),
+        D: $('#D').val(),
+        A: $('#A').val(),
+        gm: $('#gm').val(),
+        Dm: $('#Dm').val(),
+        blast: $('#blast').val(),
+        feat_type1: $('#feat_type1').val(),
+        feat_type2: $('#feat_type2').val(),
+        dsgid1: $('#dsgid1').val(),
+        dsgid2: $('#dsgid2').val(),
+        jobtitle: $('#jobtitle').val(),
+        basename: pageObj.basename,
+        email: $('#email').val(),
+        regen_images: $('#regen_images')[0].checked,
+        width: $('#master_width').val(),
+        dagchainer_type: dagchainer.val(),
+        ks_type: $('#ks_type').val(),
+        assemble: $('#assemble')[0].checked,
+        axis_metric: $('#axis_metric').val(),
+        axis_relationship: $('#axis_relationship').val(),
+        min_chr_size: $('#min_chr_size').val(),
+        spa_ref_genome: $('spa_ref_genome').val(),
+        show_non_syn: $('#show_non_syn')[0].checked,
+        color_type: $('#color_type').val(),
+        box_diags: $('#box_diags')[0].checked,
+        merge_algo: $('#merge_algo').val(),
+        depth_algo: $('#depth_algo').val(),
+        depth_org_1_ratio: $('#depth_org_1_ratio').val(),
+        depth_org_2_ratio: $('#depth_org_2_ratio').val(),
+        depth_overlap: $('#depth_overlap').val(),
+        fid1: pageObj.fid1,
+        fid2: pageObj.fid2,
+        show_non_syn_dots: $('#show_non_syn_dots')[0].checked,
+        flip: $('#flip')[0].checked,
+        clabel: $('#clabel')[0].checked,
+        skip_rand: $('#skiprand')[0].checked,
+        color_scheme: $('#color_scheme').val(),
+        chr_sort_order: $('#chr_sort_order').val(),
+        codeml_min: $('#codeml_min').val(),
+        codeml_max: $('#codeml_max').val(),
+        logks: $('#logks')[0].checked,
+        csco: $('#csco').val(),
+        jquery_ajax: 1,
+        regen_images: 1
+    };
+
+    // TODO: Scale polling time linearly with long running jobs
+    var duration = pageObj.waittime;
+
+    var readlog_callback = function () {
+        read_log(pageObj.basename, pageObj.tempdir);
+    };
+
+    var start_callback = function(tiny_link) {
+            pageObj.nolog=1;
+
+            setTimeout(readlog_callback, duration);
+            argument_list.fname = 'go';
+            argument_list.tiny_link = tiny_link;
+            $.ajax({
+            data: argument_list,
+            success: function(data) {
+                handle_results(data);
+            }
+        });
+    }
+
+    argument_list.fname = 'get_query_link';
+    $.ajax({
+        dataType: 'text',
+        data: argument_list,
+        success: function(data) {
+            var link = "Regenerate this analysis: <a href=" + data + " onclick=window.open('tiny')"
+            + "target = _new>" + data + "</a>";
+
+            jQuery('html, body').animate({scrollTop: 0}, 1000); 
+            $('#results').hide(0);  	
+            $('#short_url').html(link);
+            $('#short_url').fadeIn(1000);
+            
+            $('#log_text').show(0);
+            $('#log_text').html('Beginning run...');
+            start_callback (data);
+        }
+    }); 
+}
+
+function read_log(name, dir) {
+    $.ajax({ 
+        data: {
+            jquery_ajax: 1,
+            fname: 'read_log',
+            logfile: name,
+            tempdir: dir, 
+        },
+        success : function(data) {
+            monitor_log(data);
+        }, 
+    });
 }
 
 function handle_results(val){
- $('#log_text').hide(0);
- $('#results').show(0).html(val);
- $(function() {$("#synmap_zoom_box").draggable();});
- setup_button_states();
- ajax_wait("check_previous_analyses();");
- 
+    $('#log_text').hide(0);
+    $('#results').show(0).html(val);
+    $(function() {$("#synmap_zoom_box").draggable();});
+    setup_button_states();
+    ajax_wait("check_previous_analyses();");
 }
 
 function check_previous_analyses(){
- get_previous_analyses(['args__oid1','org_id1', 'args__oid2','org_id2'],[load_previous_analyses]);
+    var gid1 = $('#org_id1').val();
+    var gid2 = $('#org_id2').val();
+    
+    if (gid1 && gid2) {
+        $.ajax({
+            data: {
+                jquery_ajax: 1,
+                oid1: gid1,
+                oid2: gid2,
+            },
+            success: function(data)  {
+                load_previous_analyses(data);
+            }
+        });
+    }
+//get_previous_analyses(['args__oid1','org_id1', 'args__oid2','org_id2'],[load_previous_analyses]);
 }
 
 function load_previous_analyses (stuff) {
- $('#previous_analyses').html(stuff);
- init_table();
+    $('#previous_analyses').html(stuff);
+    init_table();
 }
 
 function update_params(val) {
@@ -287,6 +401,13 @@ function timing(val, val2){
 }
 
 $(document).ready(function(){
+    $.ajaxSetup({
+        type: "GET",
+        url: "<TMPL_VAR NAME='PAGE_NAME'>",
+        dataType: "html",
+        cache: false
+    });
+
   if($('#org_name1').val() != "Search") {
     $('#org_name1').css({fontStyle: "normal"});
     timing('org_name1',1);
@@ -318,13 +439,11 @@ $(document).ready(function(){
  pageObj.fid2=<TMPL_VAR NAME=FID2>;
  pageObj.tempdir="<TMPL_VAR NAME=TEMPDIR>";
 
- var autogo = <TMPL_VAR NAME=AUTOGO>;
- if (autogo) {
-    run_synmap();
+    var autogo = <TMPL_VAR NAME=AUTOGO>;
+    if (autogo) {
+        run_synmap(autogo);
     }
-
  });
-
 
 function display_dagchainer_settings(params,type) {
  
@@ -487,7 +606,14 @@ function reset_basename(){
   if (!pageObj.finished && pageObj.nolog<8) {
     var waittime = pageObj.waittime;
     message+="<br/><br/>Next progress check in "+Math.floor(waittime/1000)+" seconds.";
-    setTimeout("read_log(['args__logfile', 'args__'+pageObj.basename, 'args__tempdir', 'args__'+pageObj.tempdir], [monitor_log])",pageObj.waittime);
+   
+   // TODO: Scale polling time linearly with long running jobs
+   var duration = pageObj.waittime;
+    var readlog_callback = function() {
+        read_log(pageObj.basename, pageObj.tempdir);
+    };  
+
+    setTimeout(readlog_callback, duration);
   }
   
   if (message) $('#log_text').html(message);
@@ -579,6 +705,7 @@ function post_to_grimm(seq1, seq2)
 
 </script>
 <table class="ui-widget-content ui-corner-all"><tr><td>
+<div id=short_url style="padding: 5px; text-align: center; display:none;"></div>
 <DIV id=log_text class="small dna" style="display:none"></DIV>
 <DIV id=results><TMPL_IF NAME=RESULTS><TMPL_VAR NAME=RESULTS><TMPL_ELSE>
 <div style="clear: both;"> </div>
@@ -597,7 +724,7 @@ function post_to_grimm(seq1, seq2)
 </table>
 
 
-<span style="font-size: 1em" class="ui-button ui-button-go ui-corner-all" id="synmap_go" onClick="run_synmap();" >Generate SynMap</span>
+<span style="font-size: 1em" class="ui-button ui-button-go ui-corner-all" id="synmap_go" onClick="run_synmap(false);" >Generate SynMap</span>
 
 <span style="font-size: 0.8em" class='ui-button ui-corner-all' onClick="$('#results').html('');" >Clear Results</span>
 
@@ -635,7 +762,7 @@ function post_to_grimm(seq1, seq2)
   <tr valign=top class="odd">
   <td style="color:#009900">DAGChainer Options:
   <td>
-    <label>Relative Gene Order<input id="dagchainer_type" name="dagchainer_type" type=radio value="gene_order" <TMPL_VAR DAG_GENE_SELECT>  onCLick="display_dagchainer_settings()"></label>
+    <label>Relative Gene Order<input id="dagchainer_type" name="dagchainer_type" checked="true" type=radio value="geneorder" <TMPL_VAR DAG_GENE_SELECT>  onCLick="display_dagchainer_settings()"></label>
     <label>Nucleotide Distance<input id="dagchainer_type" name="dagchainer_type" type=radio value="distance" <TMPL_VAR DAG_DISTANCE_SELECT>  onCLick="display_dagchainer_settings()"></label><span class=small>We recommend using "Relative Gene Order"</span>
 
 
