--- a/web/tmpl/User.tmpl
+++ b/web/tmpl/User.tmpl
@@ -953,7 +953,10 @@ function send_items_to(page_name, format) {
 				<TMPL_LOOP NAME="USER_LOOP">
 					<div>
 						<span style="color:dimgray;"><TMPL_VAR NAME="USER_FULL_NAME"> (<TMPL_VAR NAME="USER_NAME">) (<TMPL_VAR NAME="USER_ROLE">)<span>
-						<span onClick="$(this.parent).fadeOut(); remove_items_from_user_or_group('<TMPL_VAR NAME=USER_ITEM>');" class="link ui-icon ui-icon-close"></span><br>
+						<TMPL_IF NAME="USER_DELETE">
+						<span onClick="$(this.parent).fadeOut(); remove_items_from_user_or_group('<TMPL_VAR NAME=USER_ITEM>');" class="link ui-icon ui-icon-close"></span>
+						</TMPL_IF>
+						<br>
 					</div>
 				</TMPL_LOOP>
 				<TMPL_IF NAME="ACCESS_MSG">
