updated links to ask.iplant instead of forums

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -109,7 +109,7 @@ $(document).ready( function() {
 });
 
 </SCRIPT>
-<div id="main_alert" style="color: red; font-size: 1em; text-align: center"></div>
+<div id="main_alert" style="width:90%;color: red; font-size: 1em; text-align: center"></div>
 <div id="signin_popup" class="image_window" style="display:none"></div>
 
 <TMPL_UNLESS NAME="MENU">
@@ -135,7 +135,7 @@ $(document).ready( function() {
 					<li><a href="GEvo.pl" target="_self">GEvo</a></li>
 				</ul>
 			</li>
-			<li><a id="forums" href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_self">Forums</a></li>
+			<li><a id="forums" href="http://iplant.co/AskCoGe" target="_blank">Forums</a></li>
 			<li><a href='javascript:void(0)'>Data</a>
 				<ul>
 					<li><a href="User.pl" target="_self">Profile</a></li>
@@ -148,7 +148,7 @@ $(document).ready( function() {
 				<ul>
 					<li><a href="/wiki" target="_blank">CoGePedia</a></li>
 					<li><a href="<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
-					<li><a href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_blank">Forums</a></li>
+					<li><a href="http://iplant.co/AskCoGe" target="_blank">Forums</a></li>
 					<li><a href="/wiki/index.php/FAQs" target="_blank">About CoGe</a></li>
 					<li><a href="/wiki/index.php/Tutorials" target="_blank">Tutorials</a></li>
 					<li><a href="/wiki/index.php/Contact_Page" target="_blank">Contact or Cite Us</a></li>
