fixed bug in export ajax call

--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -90,7 +90,7 @@ function feature_checkboxes(){
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
-			fname: 'action',
+			fname: action,
 			accn_list: accn
 		},
 		success : function(url) {
