--- a/web/tmpl/GenomeList.tmpl
+++ b/web/tmpl/GenomeList.tmpl
@@ -214,7 +214,7 @@ $(function() {
 	  var create_callback = function(divid) {
 	      var local_divid = divid;
 	      return function (data) {
-	          $('#'+local_divid).html(data);
+	          $('#'+local_divid).html("<span class=xsmall>"+data+"</span>");
 	      };
 	  };
 
