updated header bar

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -124,7 +124,7 @@ $(document).ready( function() {
  
 	<span style="float:right; margin-right: 70px;">
 		<ul class="sf-menu">
-			<li><a id="home" href="index.pl" target="_self">Home</a></li>
+			<li><a href="User.pl" target="_self">My Profile</a></li>
 			<li><a href='javascript:void(0)'>Tools</a>
 				<ul>
 					<li><a href="OrganismView.pl" target="_self">OrganismView</a></li>
@@ -133,10 +133,10 @@ $(document).ready( function() {
 					<li><a href="SynFind.pl" target="_self">SynFind</a></li>
 					<li><a href="SynMap.pl" target="_self">SynMap</a></li>
 					<li><a href="GEvo.pl" target="_self">GEvo</a></li>
+					<li><a id="home" href="index.pl" target="_self">Home</a></li>
 				</ul>
 			</li>
-			<li><a id="forums" href="http://iplant.co/AskCoGe" target="_blank">Forums</a></li>
-			<li><a href='javascript:void(0)'>Data</a>
+			<li><a href='javascript:void(0)'>My Stuff</a>
 				<ul>
 					<li><a href="User.pl" target="_self">Profile</a></li>
 					<li><a href="Groups.pl" target="_self">Groups</a></li>
@@ -144,6 +144,7 @@ $(document).ready( function() {
 					<li><a href="History.pl" target="_self">History</a></li>
 				</ul>
 			</li>
+			<li><a id="forums" href="http://iplant.co/AskCoGe" target="_blank">Forums</a></li>
 			<li><a href='javascript:void(0)'>Help</a>
 				<ul>
 					<li><a href="/wiki" target="_blank">CoGePedia</a></li>
