Show common login page instead of "access denied".

--- a/web/tmpl/LoadGenome.tmpl
+++ b/web/tmpl/LoadGenome.tmpl
@@ -544,3 +544,9 @@ $(document).ready(function() {
 </TMPL_IF> <!-- ADMIN_AREA -->
 
 </TMPL_IF> <!-- MAIN -->
+
+
+
+<TMPL_IF NAME='LOGIN'>
+	<TMPL_INCLUDE NAME="widgets/Login.tmpl">
+</TMPL_IF>
