--- a/web/tmpl/History.tmpl
+++ b/web/tmpl/History.tmpl
@@ -42,10 +42,10 @@ var columns = [
 			return '<img id="'+dataContext['id']+'" src="picts/star-hollow.png" onclick="toggle_star(this);">';
 		}},
 	{id: "date_time", name: "Date/Time", field: "date_time", minWidth: 160, maxWidth: 160, sortable: true, cssClass: "cell-centered"},
-	{id: "user", name: "User", field: "user", minWidth: 30, maxWidth: 80, sortable: true, cssClass: "cell-normal",
+	{id: "user", name: "User", field: "user", minWidth: 30, maxWidth: 80, sortable: true, cssClass: "cell-normal"/*,
 		formatter: function ( row, cell, value, columnDef, dataContext ) {
             return '<a target="_blank" href="User.pl?name=' + value + '">' + value + '</a>';
-        }},
+        }*/},
 	{id: "page", name: "Page", field: "page", minWidth: 90, maxWidth: 100, sortable: true, cssClass: "cell-normal"},
 	{id: "description", name: "Description", field: "description", minWidth: 100, sortable: true, cssClass: "cell-normal",
 		formatter: function ( row, cell, value, columnDef, dataContext ) {
@@ -277,6 +277,12 @@ function toggle_star(img) {
 <div id="myGrid" style="max-width:95%;height:80%;display:none;"></div>
 
 </TMPL_IF> <!-- MAIN -->
+
+
+
+<TMPL_IF NAME='LOGIN'>
+	<TMPL_INCLUDE NAME="widgets/Login.tmpl">
+</TMPL_IF>
 
 
 
